# PJC-codes

./: .gitignore  README.md
cviceni/: .gitignore  cviceni02.cpp  cviceni03.cpp  cviceni04.cpp
cviceni/cviceni05/: vector.cpp  vector.hpp
cviceni/cviceni05-trida/: array.cpp
cviceni/cviceni06-final/: vector.cpp  vector.hpp
cviceni/cviceni07/: array.hpp  main.cpp  vector.cpp  vector.hpp
flatset/: CMakeLists.txt  flatset.h  main.cpp  test_flatset.cpp  tests-helpers.cpp  tests-helpers.hpp
flatset-ver02/: flatset.hpp  main.cpp
inita/: CMakeLists.txt  main.cpp
initb/: CMakeLists.txt  Makefile  main  main.cpp  small0-tests.cpp  small0.cpp  small0.hpp
parser-1/: CMakeLists.txt  expr.cpp  expr.hpp  main.cpp  tests-small6-data.cpp  tests-small6-data.hpp  tests-small6.cpp
semestral/: CMakeLists.txt  README.md  dijkstra.cpp  dijkstra.hpp  graph.cpp  graph.hpp  main.cpp  printer.hpp  tools.cpp
semestral/data/: graph1.nnc  graph2.nnc
small1/: CMakeLists.txt  Makefile  main.cpp  small1.cpp  small1.hpp  tests-small1.cpp
trie-1/: CMakeLists.txt  catch.hpp  main.cpp  tests-helpers.hpp  trie-tests.cpp  trie.cpp  trie.hpp
trie-2/: CMakeLists.txt  main.cpp  trie-1.cpp  trie-1.hpp  trie-tests.cpp  trie.cpp  trie.hpp
trie-3/: CMakeLists.txt  trie-tests.cpp  trie.cpp  trie.hpp
